--- a/backend_connector/ladebalken.html
+++ b/backend_connector/ladebalken.html
@@ -88,7 +88,7 @@
         // Die Gesamtdauer des Ladevorgangs in Sekunden
         const DURATION_IN_SECONDS = 30;
         // Die Ziel-URL, zu der nach Abschluss umgeleitet wird
-        const REDIRECT_URL = 'https://www.google.de'; // <-- ÄNDERE DIESE URL
+        const REDIRECT_URL = 'https://bfh2025.denon.dev/'; // <-- ÄNDERE DIESE URL
 
         // Referenzen auf die HTML-Elemente holen
         const progressBarInner = document.getElementById('progressBarInner');
